Added direct URL for background post

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-For information on the context please read: http://blog.thecapacity.org
+For information on the context please read: http://blog.thecapacity.org/2012/06/03/a-digital-revolution/
 
 The site is built to run on Google App Engine, but should be easily portable.
 
